--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,6 +93,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+.imp-frame {
+  z-index: 99999999;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
